Closed
Bug 22315
Opened 26 years ago
Closed 26 years ago
Entities are broken in HTML mail send
Categories
(MailNews Core :: MIME, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
M13
People
(Reporter: nhottanscp, Assigned: nhottanscp)
References
Details
Attachments
(1 file)
|
3.72 KB,
patch
|
Details | Diff | Splinter Review |
I used win32 build 1999-12-21-09-M13. I don't know if this is a regression from
M12.
When I sent a HTML mail with a trade mark (on windows, holding Alt and type 153
on numeric key pad). Received message contains ™ instead of ™.
As a result, the broken entity is shown in the message view as "™".
| Assignee | ||
Comment 1•26 years ago
|
||
On M12, mozilla freezes with the same operation. I think it is the infinite loop
fixed recently in M13.
Comment 2•26 years ago
|
||
This will have to be release noted for M12 as users trying
to input Windows-1252 only characters under Latin 1 encoding
send, Latin 1 characters under JPN send, etc. will run
into this freezing problem.
Updated•26 years ago
|
Assignee: rhp → mozilla
Comment 3•26 years ago
|
||
Ben,
I've noticed this with parsing some I18N messages as well.
- rhp
Updated•26 years ago
|
Component: Composition → MIME
Target Milestone: M13
Comment 4•26 years ago
|
||
nhotta,
If ScanHTML is fed with Unicode (neither "nbsp" nor "™"), the
problem should go away. I thought, you were working on that?
rhp,
didn't the additional else statement (mozTXTToHTMLConv.cpp, Version 1.7)
make it into M12?
Comment 5•26 years ago
|
||
> rhp,
> didn't the additional else statement (mozTXTToHTMLConv.cpp, Version 1.7)
> make it into M12?
Nope. They branched before then and I've been on my back the past 1 1/2 days
fighting the flu.
| Assignee | ||
Comment 6•26 years ago
|
||
>nhotta,
>If ScanHTML is fed with Unicode (neither "nbsp" nor "™"), the
>problem should go away. I thought, you were working on that?
I have proposed ScanHTML to move to nsMsgSend.cpp from nsMsgSendPart.cpp.
I do not plan to change the code myself but I can test both entity and i18n
cases once your patch is ready.
Comment 7•26 years ago
|
||
Sorry, but I can't make this change, as I don't understand the data flow or the
corresponding code. I just wrote mozTXTToHTMLConv.
| Assignee | ||
Updated•26 years ago
|
Assignee: mozilla → nhotta
| Assignee | ||
Updated•26 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 8•26 years ago
|
||
OK, I'll try to relocate ScanHTML. In case of any internal problem in
mozTXTToHTMLConv, I'll reassign to you.
| Assignee | ||
Comment 9•26 years ago
|
||
| Assignee | ||
Comment 10•26 years ago
|
||
I attached a diff. Rich, could you review it?
I have tested HTML mails with url strings (e.g., http://home.netscape.com,
nhotta@netscape.com), an entity ™ and a simple Japanese text (copied from
bug 18410).
I don't know much about ScanHTML itself so probably more extensive testing
needed by the author (mozilla@bucksch.org).
| Assignee | ||
Updated•26 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 11•26 years ago
|
||
The fix checked in.
For verification, please also test Japanese mail which had a problem before.
Comment 12•26 years ago
|
||
Changed QA contact to momoi as it involves intl data testing.
QA Contact: lchiang → momoi
Comment 13•26 years ago
|
||
** Checked with 1/20/00 Win32 build **
The trademark and other HTML entities are now correctly encoded.
Also the crash I reported when I mixed Latin 1 entities with Japanese msg send
is gone from this build.
Status: RESOLVED → VERIFIED
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•