Changed to scan for HTML before converting from unicode to mail charset, bug 22315, r=rhp.